--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ before_deploy:
 deploy:
     provider: script
     script: |
+        ibmcloud plugin list
         ibmcloud login --apikey ${IBM_CLOUD_API_KEY} > /dev/null 2>&1
         ibmcloud fn deploy --manifest manifest.yml --auth ${IBM_CLOUD_API_KEY} --namespace {IBM_CLOUD_NAMESPACE}
