add deploy script

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,4 @@ before_deploy:
     - curl -fsSL https://clis.cloud.ibm.com/install/linux | sh
 deploy:
     provider: script
-    script: |
-        ibmcloud plugin list
-        ibmcloud login --apikey ${IBM_CLOUD_API_KEY} > /dev/null 2>&1
-        ibmcloud fn deploy --manifest manifest.yml --auth ${IBM_CLOUD_API_KEY} --namespace {IBM_CLOUD_NAMESPACE}
+    script: bash deploy.sh
