--- a/.drone.yml
+++ b/.drone.yml
@@ -4,9 +4,11 @@ name: default
 
 steps:
 - name: ibm
+  image: node
   commands:
   - curl -fsSL https://clis.cloud.ibm.com/install/linux | sh
 - name: cloud
+  image: node
   commands:
   - ibmcloud plugin install cloud-functions
   - ibmcloud plugin list
