--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ name: default
 
 steps:
 - name: ibm
-  image: node
+  image: alpine
   environment:
     IBM_CLOUD_API_KEY:
       from_secret: IBM_CLOUD_API_KEY
@@ -18,8 +18,8 @@ steps:
   - curl -fsSL https://clis.cloud.ibm.com/install/linux | sh
   - ibmcloud plugin install cloud-functions
   - ibmcloud plugin list
-  - ibmcloud login --apikey ${IBM_CLOUD_API_KEY} -r ${IBM_CLOUD_REGION}
-  - ibmcloud target -o ${IBM_CLOUD_ORG} -s ${IBM_CLOUD_SPACE}
+  - ibmcloud login --apikey $IBM_CLOUD_API_KEY -r $IBM_CLOUD_REGION
+  - ibmcloud target -o $IBM_CLOUD_ORG -s $IBM_CLOUD_SPACE
   - ibmcloud fn deploy --manifest manifest.yml
   - ibmcloud fn list
   
