--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ name: default
 
 steps:
 - name: ibm
-  image: alpine
+  image: node
   environment:
     IBM_CLOUD_API_KEY:
       from_secret: IBM_CLOUD_API_KEY
